--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <!-- Animate On Scroll Library -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./img/favicon.JPG" type="image/x-icon">
     <!-- Main Template Css File -->
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -97,7 +99,7 @@
               <span>Available</span>
             </p>
           </div>
-          <a href="#portfolio" class="btn">View All Projects</a>
+          <a href="#projects" class="btn">View All Projects</a>
         </div>
     </section>
     <!-- end about -->
