--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="main-btn">
             <a href="#contact" class="btn">Hire Me</a>
-            <a href="#" class="btn btn2">Download CV</a>
+            <a target="_blank" href="https://drive.google.com/file/d/1S78rcN6C7H-Tsg8SnMaxAUbPrF9xyJCH/view?usp=sharing" class="btn btn2">Download CV</a>
         </div>
     </div> 
     </section>
@@ -167,12 +167,18 @@
                 <h5>Kasper-website</h5>
               </div>
               <div class="row-icon">
-                <a href="https://elkwawy.github.io/Kasper-website/">
-                  <i class="ri-github-fill"></i>
+                <a target="_blank" href="https://github.com/elkwawy/Kasper-website">
+                  <i class="ri-code-s-slash-line"></i>
+                </a>
+                <a target="_blank" href="https://elkwawy.github.io/Kasper-website/">
+                  <i class="ri-eye-line"></i>
                 </a>
               </div>
             </div>
-            <h4>Created by html and css</h4>
+              <div class="created-by">
+                <img src="./img/html-5.png" alt="">
+                <img src="./img/css-3.png" alt="">
+              </div>
           </div>
           <div class="row">
             <img src="./img/port-2.png">
@@ -181,12 +187,18 @@
                 <h5>leon-website</h5>
               </div>
               <div class="row-icon">
-                <a href="https://elkwawy.github.io/Leon-website/">
-                  <i class="ri-github-fill"></i>
+                <a target="_blank" href="https://elkwawy.github.io/Kasper-website/">
+                  <i class="ri-code-s-slash-line"></i>
+                </a>
+                <a target="_blank" href="https://github.com/elkwawy/Leon-website">
+                  <i class="ri-eye-line"></i>
                 </a>
               </div>
             </div>
-            <h4>Created by html and css</h4>
+            <div class="created-by">
+              <img src="./img/html-5.png" alt="">
+              <img src="./img/css-3.png" alt="">
+            </div>
           </div>
           <div class="row">
             <img src="./img/port-3.png">
@@ -195,12 +207,19 @@
                 <h5>To-Do List</h5>
               </div>
               <div class="row-icon">
-                <a href="https://elkwawy.github.io/To-Do-List/">
-                  <i class="ri-github-fill"></i>
+                <a target="_blank" href="https://github.com/elkwawy/To-Do-List">
+                  <i class="ri-code-s-slash-line"></i>
+                </a>
+                <a target="_blank" href="https://elkwawy.github.io/To-Do-List/">
+                  <i class="ri-eye-line"></i>
                 </a>
               </div>
             </div>
-            <h4>Created by html and css and js</h4>
+            <div class="created-by">
+              <img src="./img/html-5.png" alt="">
+              <img src="./img/css-3.png" alt="">
+              <img src="./img/js.png" alt="">
+            </div>
           </div>
           <div class="row">
             <img src="./img/port-4.jpg">
@@ -209,10 +228,19 @@
                 <h5>Website Design</h5>
               </div>
               <div class="row-icon">
-                <i class="ri-github-fill"></i>
+                <a href="">
+                  <i class="ri-code-s-slash-line"></i>
+                </a>
+                <a href="">
+                  <i class="ri-eye-line"></i>
+                </a>
               </div>
             </div>
-            <h4>Website Development For JS</h4>
+            <div class="created-by">
+              <img src="./img/html-5.png" alt="">
+              <img src="./img/css-3.png" alt="">
+              <img src="./img/js.png" alt="">
+            </div>
           </div>
     </section>
     <!-- end projects -->
