--- a/index.html
+++ b/index.html
@@ -57,19 +57,21 @@
         <a target="_blank" href="https://www.linkedin.com/in/ahmed-elkwawy-0a3973224/"><i class="ri-linkedin-fill"></i></a>
         <a target="_blank" href="https://github.com/elkwawy"><i class="ri-github-fill"></i></a>
         </div>
-
         <div class="main-btn">
             <a href="#contact" class="btn">Hire Me</a>
             <a target="_blank" href="https://drive.google.com/file/d/1S78rcN6C7H-Tsg8SnMaxAUbPrF9xyJCH/view?usp=sharing" class="btn btn2">Download CV</a>
         </div>
     </div> 
+    <!-- <div class="hero-img">
+      <img src="./img/hero-img.png" alt="avatar">
+    </div> -->
     </section>
     <!-- end hero -->
 
     <!-- start about-->
     <section class="about" id="about">
         <div class="about-img" >
-          <img src="./img/me.jpg" >
+          <img src="./img/about-img.png" >
         </div>
         <div class="about-text">
           <h2>I'm a Frontend <span>Developer</span></h2>
