--- a/index.html
+++ b/index.html
@@ -5,19 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahmed elkwawy</title>
     <!-- Box icons link -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
     <!-- Remix icons link -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <!-- Google fonts link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Animate On Scroll Library -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="./img/favicon.JPG" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.JPG" type="image/x-icon" />
     <!-- Main Template Css File -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!--**** Scroll to top button ****-->
@@ -31,38 +40,59 @@
     </div>
     <!-- start header -->
     <header>
-        <a href="#" class="logo">Ahmed <span>Elkwawy</span></a>
+      <a href="#" class="logo">Ahmed <span>Elkwawy</span></a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
-      
-        <ul class="navlist">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+      <div class="bx bx-menu" id="menu-icon"></div>
+
+      <ul class="navlist">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </header>
     <!-- end header -->
 
     <!-- start hero -->
     <section class="hero" id="home">
-       <div class="main-content" data-aos="fade-in">
+      <div class="main-content" data-aos="fade-in">
         <h4>Hi, There!</h4>
         <h1>I'm <span>Ahmed Elkwawy</span></h1>
-        <p>Explore the great opportunities of your website with us! Let creativity be reflected in unique and wonderful user experiences. Let us be partners in the journey of turning your ideas into digital reality. Let's start together to realize your vision, we are here to support you at every step</p>
+        <p>
+          Explore the great opportunities of your website with us! Let
+          creativity be reflected in unique and wonderful user experiences. Let
+          us be partners in the journey of turning your ideas into digital
+          reality. Let's start together to realize your vision, we are here to
+          support you at every step
+        </p>
         <div class="social">
-        <a target="_blank" href="https://www.instagram.com/ahmed.elkwawy"><i class="ri-instagram-line"></i></a>
-        <a target="_blank" href="https://twitter.com/Elkwawy16"><i class="ri-twitter-fill"></i></a>
-        <a target="_blank" href="https://www.linkedin.com/in/ahmed-elkwawy-0a3973224/"><i class="ri-linkedin-fill"></i></a>
-        <a target="_blank" href="https://github.com/elkwawy"><i class="ri-github-fill"></i></a>
+          <a target="_blank" href="https://www.instagram.com/ahmed.elkwawy"
+            ><i class="ri-instagram-line"></i
+          ></a>
+          <a target="_blank" href="https://twitter.com/Elkwawy16"
+            ><i class="ri-twitter-fill"></i
+          ></a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/ahmed-elkwawy-0a3973224/"
+            ><i class="ri-linkedin-fill"></i
+          ></a>
+          <a target="_blank" href="https://github.com/elkwawy"
+            ><i class="ri-github-fill"></i
+          ></a>
         </div>
         <div class="main-btn">
-            <a href="#contact" class="btn">Hire Me</a>
-            <a target="_blank" href="https://drive.google.com/file/d/1S78rcN6C7H-Tsg8SnMaxAUbPrF9xyJCH/view?usp=sharing" class="btn btn2">Download CV</a>
+          <a href="#contact" class="btn">Hire Me</a>
+          <a
+            target="_blank"
+            href="https://drive.google.com/file/d/1S78rcN6C7H-Tsg8SnMaxAUbPrF9xyJCH/view?usp=sharing"
+            class="btn btn2"
+            >Download CV</a
+          >
         </div>
-    </div> 
-    <!-- <div class="hero-img">
+      </div>
+      <!-- <div class="hero-img">
       <img src="./img/hero-img.png" alt="avatar">
     </div> -->
     </section>
@@ -70,39 +100,39 @@
 
     <!-- start about-->
     <section class="about" id="about">
-        <div class="about-img" >
-          <img src="./img/about-img.png" >
+      <div class="about-img">
+        <img src="./img/about-img.png" />
+      </div>
+      <div class="about-text">
+        <h2>I'm a Frontend <span>Developer</span></h2>
+        <div class="exp-area">
+          <p class="exp">
+            Experience:
+            <span>1 Years</span>
+          </p>
+          <p class="exp">
+            Specialty:
+            <span>Web Developer</span>
+          </p>
+          <p class="exp">
+            Address:
+            <span>Egypt ,Dakahlia</span>
+          </p>
+          <p class="exp">
+            Email:
+            <span>ama991969@gmail.com</span>
+          </p>
+          <p class="exp">
+            Phone:
+            <span>01285142430</span>
+          </p>
+          <p class="exp">
+            Freelance:
+            <span>Available</span>
+          </p>
         </div>
-        <div class="about-text">
-          <h2>I'm a Frontend <span>Developer</span></h2>
-          <div class="exp-area">
-            <p class="exp">
-              Experience:
-              <span>1 Years</span>
-            </p>
-            <p class="exp">
-              Specialty:
-              <span>Web Developer</span>
-            </p>
-            <p class="exp">
-              Address:
-              <span>Egypt ,Dakahlia</span>
-            </p>
-            <p class="exp">
-              Email:
-              <span>ama991969@gmail.com</span>
-            </p>
-            <p class="exp">
-              Phone:
-              <span>01285142430</span>
-            </p>
-            <p class="exp">
-              Freelance:
-              <span>Available</span>
-            </p>
-          </div>
-          <a href="#projects" class="btn">View All Projects</a>
-        </div>
+        <a href="#projects" class="btn">View All Projects</a>
+      </div>
     </section>
     <!-- end about -->
 
@@ -110,48 +140,48 @@
     <section class="skills" id="skills">
       <div class="center-text">
         <h2>My <span>Skills</span></h2>
-        <div class="skills-content"> 
+        <div class="skills-content">
           <div class="box">
-            <img src="./img/html-5.png">
-              <p>HTML</p>
+            <img src="./img/html-5.png" />
+            <p>HTML</p>
           </div>
           <div class="box">
-            <img src="./img/css-3.png">
-              <p>CSS</p>
+            <img src="./img/css-3.png" />
+            <p>CSS</p>
           </div>
           <div class="box">
-            <img src="./img/js.png">
-              <p>JavaScript</p>
+            <img src="./img/js.png" />
+            <p>JavaScript</p>
           </div>
           <div class="box">
-            <img src="./img/c-.png">
-              <p>CPP</p>
+            <img src="./img/c-.png" />
+            <p>CPP</p>
           </div>
           <div class="box">
-            <img src="./img/python.png">
-              <p>Python</p>
+            <img src="./img/python.png" />
+            <p>Python</p>
           </div>
           <div class="box">
-            <img src="./img/git.png">
-              <p>Git</p>
+            <img src="./img/git.png" />
+            <p>Git</p>
           </div>
           <div class="box">
-            <img src="./img/github.png">
-              <p>Github</p>
+            <img src="./img/github.png" />
+            <p>Github</p>
           </div>
           <div class="box">
-            <img src="./img/icons8-notion-500.png">
-              <p>Notion</p>
+            <img src="./img/icons8-notion-500.png" />
+            <p>Notion</p>
           </div>
           <div class="box">
-            <img src="./img/Terminal.png">
-              <p>Terminal</p>
+            <img src="./img/Terminal.png" />
+            <p>Terminal</p>
           </div>
           <div class="box">
-            <img src="./img/visual-studio-code.png">
-              <p>VS Code</p>
+            <img src="./img/visual-studio-code.png" />
+            <p>VS Code</p>
           </div>
-
+        </div>
       </div>
     </section>
     <!-- end Skills -->
@@ -160,50 +190,63 @@
     <section class="projects" id="projects">
       <div class="center-text">
         <h2>My <span>Projects</span></h2>
-        
+
         <div class="projects-content">
           <div class="row">
-            <img src="./img/port-1.png">
+            <img src="./img/porj-4.png" />
             <div class="main-row">
               <div class="row-text">
-                <h5>Kasper-website</h5>
+                <h5>Presonal-website</h5>
               </div>
               <div class="row-icon">
-                <a target="_blank" href="https://github.com/elkwawy/Kasper-website">
+                <a
+                  target="_blank"
+                  href="https://github.com/elkwawy/Personal-website"
+                >
                   <i class="ri-code-s-slash-line"></i>
                 </a>
-                <a target="_blank" href="https://elkwawy.github.io/Kasper-website/">
-                  <i class="ri-eye-line"></i>
-                </a>
-              </div>
-            </div>
-              <div class="created-by">
-                <img src="./img/html-5.png" alt="">
-                <img src="./img/css-3.png" alt="">
-              </div>
-          </div>
-          <div class="row">
-            <img src="./img/port-2.png">
-            <div class="main-row">
-              <div class="row-text">
-                <h5>leon-website</h5>
-              </div>
-              <div class="row-icon">
-                <a target="_blank" href="https://elkwawy.github.io/Kasper-website/">
-                  <i class="ri-code-s-slash-line"></i>
-                </a>
-                <a target="_blank" href="https://github.com/elkwawy/Leon-website">
+                <a
+                  target="_blank"
+                  href="https://elkwawy.github.io/Personal-website/"
+                >
                   <i class="ri-eye-line"></i>
                 </a>
               </div>
             </div>
             <div class="created-by">
-              <img src="./img/html-5.png" alt="">
-              <img src="./img/css-3.png" alt="">
+              <img src="./img/html-5.png" alt="" />
+              <img src="./img/css-3.png" alt="" />
+              <img src="./img/js.png" alt="" />
             </div>
           </div>
           <div class="row">
-            <img src="./img/port-3.png">
+            <img src="./img/porj-3.png" />
+            <div class="main-row">
+              <div class="row-text">
+                <h5>Kasper-website</h5>
+              </div>
+              <div class="row-icon">
+                <a
+                  target="_blank"
+                  href="https://github.com/elkwawy/Kasper-website"
+                >
+                  <i class="ri-code-s-slash-line"></i>
+                </a>
+                <a
+                  target="_blank"
+                  href="https://elkwawy.github.io/Kasper-website/"
+                >
+                  <i class="ri-eye-line"></i>
+                </a>
+              </div>
+            </div>
+            <div class="created-by">
+              <img src="./img/html-5.png" alt="" />
+              <img src="./img/css-3.png" alt="" />
+            </div>
+          </div>
+          <div class="row">
+            <img src="./img/porj-2.png" />
             <div class="main-row">
               <div class="row-text">
                 <h5>To-Do List</h5>
@@ -218,44 +261,67 @@
               </div>
             </div>
             <div class="created-by">
-              <img src="./img/html-5.png" alt="">
-              <img src="./img/css-3.png" alt="">
-              <img src="./img/js.png" alt="">
+              <img src="./img/html-5.png" alt="" />
+              <img src="./img/css-3.png" alt="" />
+              <img src="./img/js.png" alt="" />
             </div>
           </div>
           <div class="row">
-            <img src="./img/port-4.jpg">
+            <img src="./img/porj-1.png" />
             <div class="main-row">
               <div class="row-text">
-                <h5>Website Design</h5>
+                <h5>leon-website</h5>
               </div>
               <div class="row-icon">
-                <a href="">
+                <a
+                  target="_blank"
+                  href="https://github.com/elkwawy/Leon-website"
+                >
                   <i class="ri-code-s-slash-line"></i>
                 </a>
-                <a href="">
+                <a
+                  target="_blank"
+                  href="https://elkwawy.github.io/Leon-website/"
+                >
                   <i class="ri-eye-line"></i>
                 </a>
               </div>
             </div>
             <div class="created-by">
-              <img src="./img/html-5.png" alt="">
-              <img src="./img/css-3.png" alt="">
-              <img src="./img/js.png" alt="">
+              <img src="./img/html-5.png" alt="" />
+              <img src="./img/css-3.png" alt="" />
             </div>
           </div>
+        </div>
+      </div>
     </section>
     <!-- end projects -->
 
     <!-- start contact -->
     <section class="contact" id="contact">
-      <div class="center-text" >
+      <div class="center-text">
         <h2>Contact <span>Me</span></h2>
         <div class="contact-form">
           <form action="">
-            <input type="text" id="fullname" placeholder="Enter Your Name" required>
-            <input type="email" id="email_id" placeholder="Enter Your Email" required>
-            <textarea id="message" cols="30" rows="10" placeholder="Write Your Message Here..." required></textarea>
+            <input
+              type="text"
+              id="fullname"
+              placeholder="Enter Your Name"
+              required
+            />
+            <input
+              type="email"
+              id="email_id"
+              placeholder="Enter Your Email"
+              required
+            />
+            <textarea
+              id="message"
+              cols="30"
+              rows="10"
+              placeholder="Write Your Message Here..."
+              required
+            ></textarea>
             <span class="contact-message"></span>
             <button type="submit" class="send-btn">Send Message</button>
           </form>
@@ -265,32 +331,34 @@
     <!-- end contact -->
 
     <!-- start footer -->
-      <div class="footer">
-        <div class="copyright">
-         <p>&copy;  All Rights Reserved By, Ahmed Elkwawy</p>
-        </div>
+    <div class="footer">
+      <div class="copyright">
+        <p>&copy; All Rights Reserved By, Ahmed Elkwawy</p>
       </div>
+    </div>
     <!-- end footer -->
 
-<!-- js links  -->
-<!-- Animate On Scroll Library -->
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-   <script>
+    <!-- js links  -->
+    <!-- Animate On Scroll Library -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
       AOS.init({
-        offset:300,
-        duration:1400,
+        offset: 300,
+        duration: 1400,
       });
-   </script>
-<!-- Send the email using emailJS -->
-<script type="text/javascript"
-src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-</script>
-<script type="text/javascript">
-(function(){emailjs.init({publicKey: "bgd-zpH2qZHAybBu_",});
-})();
-</script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<!-- Main Js File  -->
-<script src="./js/script.js"></script>
-</body>
+    </script>
+    <!-- Send the email using emailJS -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init({ publicKey: "bgd-zpH2qZHAybBu_" });
+      })();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Main Js File  -->
+    <script src="./js/script.js"></script>
+  </body>
 </html>
