--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <i class="ri-sun-line"></i>
       <i class="ri-moon-line"></i>
     </div>
-    <!-- start header -->
+    <!-- Header -->
     <header>
       <a href="#" class="logo">Ahmed <span>Elkwawy</span></a>
 
@@ -52,9 +52,8 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </header>
-    <!-- end header -->
 
-    <!-- start hero -->
+    <!-- Hero -->
     <section class="hero" id="home">
       <div class="main-content" data-aos="fade-in">
         <h4>Hi, There!</h4>
@@ -96,9 +95,8 @@
       <img src="./img/hero-img.png" alt="avatar">
     </div> -->
     </section>
-    <!-- end hero -->
 
-    <!-- start about-->
+    <!-- About-->
     <section class="about" id="about">
       <div class="about-img">
         <img src="./img/about-img.png" />
@@ -134,9 +132,8 @@
         <a href="#projects" class="btn">View All Projects</a>
       </div>
     </section>
-    <!-- end about -->
 
-    <!-- start Skills -->
+    <!--Skills -->
     <section class="skills" id="skills">
       <div class="center-text">
         <h2>My <span>Skills</span></h2>
@@ -148,6 +145,10 @@
           <div class="box">
             <img src="./img/css-3.png" />
             <p>CSS</p>
+          </div>
+          <div class="box">
+            <img src="./img/bootstrap.png" />
+            <p>Bootstrap</p>
           </div>
           <div class="box">
             <img src="./img/js.png" />
@@ -184,16 +185,15 @@
         </div>
       </div>
     </section>
-    <!-- end Skills -->
 
-    <!-- start projects -->
+    <!-- Projects -->
     <section class="projects" id="projects">
       <div class="center-text">
         <h2>My <span>Projects</span></h2>
 
         <div class="projects-content">
           <div class="row">
-            <img src="./img/porj-4.png" />
+            <img src="./img/proj-4.png" />
             <div class="main-row">
               <div class="row-text">
                 <h5>Presonal-website</h5>
@@ -220,7 +220,34 @@
             </div>
           </div>
           <div class="row">
-            <img src="./img/porj-3.png" />
+            <img src="./img/proj-5.png" />
+            <div class="main-row">
+              <div class="row-text">
+                <h5>Bondi-website</h5>
+              </div>
+              <div class="row-icon">
+                <a
+                  target="_blank"
+                  href="https://github.com/elkwawy/Bondi-website"
+                >
+                  <i class="ri-code-s-slash-line"></i>
+                </a>
+                <a
+                  target="_blank"
+                  href="https://elkwawy.github.io/Bondi-website/"
+                >
+                  <i class="ri-eye-line"></i>
+                </a>
+              </div>
+            </div>
+            <div class="created-by">
+              <img src="./img/html-5.png" alt="" />
+              <img src="./img/css-3.png" alt="" />
+              <img src="./img/bootstrap.png" alt="" />
+            </div>
+          </div>
+          <div class="row">
+            <img src="./img/proj-3.png" />
             <div class="main-row">
               <div class="row-text">
                 <h5>Kasper-website</h5>
@@ -246,7 +273,7 @@
             </div>
           </div>
           <div class="row">
-            <img src="./img/porj-2.png" />
+            <img src="./img/proj-2.png" />
             <div class="main-row">
               <div class="row-text">
                 <h5>To-Do List</h5>
@@ -267,7 +294,7 @@
             </div>
           </div>
           <div class="row">
-            <img src="./img/porj-1.png" />
+            <img src="./img/proj-1.png" />
             <div class="main-row">
               <div class="row-text">
                 <h5>leon-website</h5>
@@ -295,9 +322,8 @@
         </div>
       </div>
     </section>
-    <!-- end projects -->
 
-    <!-- start contact -->
+    <!-- Contact -->
     <section class="contact" id="contact">
       <div class="center-text">
         <h2>Contact <span>Me</span></h2>
@@ -328,15 +354,13 @@
         </div>
       </div>
     </section>
-    <!-- end contact -->
 
-    <!-- start footer -->
+    <!-- Footer -->
     <div class="footer">
       <div class="copyright">
         <p>&copy; All Rights Reserved By, Ahmed Elkwawy</p>
       </div>
     </div>
-    <!-- end footer -->
 
     <!-- js links  -->
     <!-- Animate On Scroll Library -->
