--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ahmed elkwawy</title>
+    <title>Ahmed Elkwawy</title>
     <!-- Box icons link -->
     <link
       rel="stylesheet"
@@ -99,14 +99,14 @@
     <!-- About-->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="./img/about-img.png" />
+        <img src="./img/about-img.png" alt="about-image" />
       </div>
       <div class="about-text">
         <h2>I'm a Frontend <span>Developer</span></h2>
         <div class="exp-area">
           <p class="exp">
             Experience:
-            <span>1 Years</span>
+            <span>2 Years</span>
           </p>
           <p class="exp">
             Specialty:
@@ -139,47 +139,47 @@
         <h2>My <span>Skills</span></h2>
         <div class="skills-content">
           <div class="box">
-            <img src="./img/html-5.png" />
+            <img src="./img/html-5.png" alt="html" />
             <p>HTML</p>
           </div>
           <div class="box">
-            <img src="./img/css-3.png" />
+            <img src="./img/css-3.png" alt="css" />
             <p>CSS</p>
           </div>
           <div class="box">
-            <img src="./img/bootstrap.png" />
+            <img src="./img/bootstrap.png" alt="bootstrap" />
             <p>Bootstrap</p>
           </div>
           <div class="box">
-            <img src="./img/js.png" />
+            <img src="./img/js.png" alt="js" />
             <p>JavaScript</p>
           </div>
           <div class="box">
-            <img src="./img/c-.png" />
+            <img src="./img/c-.png" alt="c++" />
             <p>CPP</p>
           </div>
           <div class="box">
-            <img src="./img/python.png" />
+            <img src="./img/python.png" alt="python" />
             <p>Python</p>
           </div>
           <div class="box">
-            <img src="./img/git.png" />
+            <img src="./img/git.png" alt="git" />
             <p>Git</p>
           </div>
           <div class="box">
-            <img src="./img/github.png" />
+            <img src="./img/github.png" alt="github" />
             <p>Github</p>
           </div>
           <div class="box">
-            <img src="./img/icons8-notion-500.png" />
+            <img src="./img/icons8-notion-500.png" alt="notion" />
             <p>Notion</p>
           </div>
           <div class="box">
-            <img src="./img/Terminal.png" />
+            <img src="./img/Terminal.png" alt="terminal" />
             <p>Terminal</p>
           </div>
           <div class="box">
-            <img src="./img/visual-studio-code.png" />
+            <img src="./img/visual-studio-code.png" alt="vs code" />
             <p>VS Code</p>
           </div>
         </div>
@@ -190,139 +190,9 @@
     <section class="projects" id="projects">
       <div class="center-text">
         <h2>My <span>Projects</span></h2>
-
-        <div class="projects-content">
-          <div class="row">
-            <img src="./img/proj-4.png" />
-            <div class="main-row">
-              <div class="row-text">
-                <h5>Presonal-website</h5>
-              </div>
-              <div class="row-icon">
-                <a
-                  target="_blank"
-                  href="https://github.com/elkwawy/Personal-website"
-                >
-                  <i class="ri-code-s-slash-line"></i>
-                </a>
-                <a
-                  target="_blank"
-                  href="https://elkwawy.github.io/Personal-website/"
-                >
-                  <i class="ri-eye-line"></i>
-                </a>
-              </div>
-            </div>
-            <div class="created-by">
-              <img src="./img/html-5.png" alt="" />
-              <img src="./img/css-3.png" alt="" />
-              <img src="./img/js.png" alt="" />
-            </div>
-          </div>
-          <div class="row">
-            <img src="./img/proj-5.png" />
-            <div class="main-row">
-              <div class="row-text">
-                <h5>Bondi-website</h5>
-              </div>
-              <div class="row-icon">
-                <a
-                  target="_blank"
-                  href="https://github.com/elkwawy/Bondi-website"
-                >
-                  <i class="ri-code-s-slash-line"></i>
-                </a>
-                <a
-                  target="_blank"
-                  href="https://elkwawy.github.io/Bondi-website/"
-                >
-                  <i class="ri-eye-line"></i>
-                </a>
-              </div>
-            </div>
-            <div class="created-by">
-              <img src="./img/html-5.png" alt="" />
-              <img src="./img/css-3.png" alt="" />
-              <img src="./img/bootstrap.png" alt="" />
-            </div>
-          </div>
-          <div class="row">
-            <img src="./img/proj-3.png" />
-            <div class="main-row">
-              <div class="row-text">
-                <h5>Kasper-website</h5>
-              </div>
-              <div class="row-icon">
-                <a
-                  target="_blank"
-                  href="https://github.com/elkwawy/Kasper-website"
-                >
-                  <i class="ri-code-s-slash-line"></i>
-                </a>
-                <a
-                  target="_blank"
-                  href="https://elkwawy.github.io/Kasper-website/"
-                >
-                  <i class="ri-eye-line"></i>
-                </a>
-              </div>
-            </div>
-            <div class="created-by">
-              <img src="./img/html-5.png" alt="" />
-              <img src="./img/css-3.png" alt="" />
-            </div>
-          </div>
-          <div class="row">
-            <img src="./img/proj-2.png" />
-            <div class="main-row">
-              <div class="row-text">
-                <h5>To-Do List</h5>
-              </div>
-              <div class="row-icon">
-                <a target="_blank" href="https://github.com/elkwawy/To-Do-List">
-                  <i class="ri-code-s-slash-line"></i>
-                </a>
-                <a target="_blank" href="https://elkwawy.github.io/To-Do-List/">
-                  <i class="ri-eye-line"></i>
-                </a>
-              </div>
-            </div>
-            <div class="created-by">
-              <img src="./img/html-5.png" alt="" />
-              <img src="./img/css-3.png" alt="" />
-              <img src="./img/js.png" alt="" />
-            </div>
-          </div>
-          <div class="row">
-            <img src="./img/proj-1.png" />
-            <div class="main-row">
-              <div class="row-text">
-                <h5>leon-website</h5>
-              </div>
-              <div class="row-icon">
-                <a
-                  target="_blank"
-                  href="https://github.com/elkwawy/Leon-website"
-                >
-                  <i class="ri-code-s-slash-line"></i>
-                </a>
-                <a
-                  target="_blank"
-                  href="https://elkwawy.github.io/Leon-website/"
-                >
-                  <i class="ri-eye-line"></i>
-                </a>
-              </div>
-            </div>
-            <div class="created-by">
-              <img src="./img/html-5.png" alt="" />
-              <img src="./img/css-3.png" alt="" />
-            </div>
-          </div>
-        </div>
+        <div class="projects-content"></div>
       </div>
     </section>
-
     <!-- Contact -->
     <section class="contact" id="contact">
       <div class="center-text">
@@ -383,6 +253,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Main Js File  -->
+    <script src="./js/products.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
