--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Hero -->
     <section class="hero" id="home">
-      <div class="main-content" data-aos="fade-in">
+      <div class="main-content" >
         <h4>Hi, There!</h4>
         <h1>I'm <span>Ahmed Elkwawy</span></h1>
         <p>
@@ -98,10 +98,11 @@
 
     <!-- About-->
     <section class="about" id="about">
-      <div class="about-img">
+      <div class="about-img"  >
         <img src="./img/about-img.png" alt="about-image" />
       </div>
-      <div class="about-text">
+      <div class="about-text" data-aos="fade-up"
+      data-aos-anchor-placement="top-bottom ">
         <h2>I'm a Frontend <span>Developer</span></h2>
         <div class="exp-area">
           <p class="exp">
