--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </header>
-
     <!-- Hero -->
     <section class="hero" id="home">
-      <div class="main-content" >
+      <div class="main-content">
         <h4>Hi, There!</h4>
         <h1>I'm <span>Ahmed Elkwawy</span></h1>
         <p>
@@ -98,11 +97,10 @@
 
     <!-- About-->
     <section class="about" id="about">
-      <div class="about-img"  >
+      <div class="about-img">
         <img src="./img/about-img.png" alt="about-image" />
       </div>
-      <div class="about-text" data-aos="fade-up"
-      data-aos-anchor-placement="top-bottom ">
+      <div class="about-text" data-aos-anchor-placement="top-bottom ">
         <h2>I'm a Frontend <span>Developer</span></h2>
         <div class="exp-area">
           <p class="exp">
@@ -138,52 +136,7 @@
     <section class="skills" id="skills">
       <div class="center-text">
         <h2>My <span>Skills</span></h2>
-        <div class="skills-content">
-          <div class="box">
-            <img src="./img/html-5.png" alt="html" />
-            <p>HTML</p>
-          </div>
-          <div class="box">
-            <img src="./img/css-3.png" alt="css" />
-            <p>CSS</p>
-          </div>
-          <div class="box">
-            <img src="./img/bootstrap.png" alt="bootstrap" />
-            <p>Bootstrap</p>
-          </div>
-          <div class="box">
-            <img src="./img/js.png" alt="js" />
-            <p>JavaScript</p>
-          </div>
-          <div class="box">
-            <img src="./img/c-.png" alt="c++" />
-            <p>CPP</p>
-          </div>
-          <div class="box">
-            <img src="./img/python.png" alt="python" />
-            <p>Python</p>
-          </div>
-          <div class="box">
-            <img src="./img/git.png" alt="git" />
-            <p>Git</p>
-          </div>
-          <div class="box">
-            <img src="./img/github.png" alt="github" />
-            <p>Github</p>
-          </div>
-          <div class="box">
-            <img src="./img/icons8-notion-500.png" alt="notion" />
-            <p>Notion</p>
-          </div>
-          <div class="box">
-            <img src="./img/Terminal.png" alt="terminal" />
-            <p>Terminal</p>
-          </div>
-          <div class="box">
-            <img src="./img/visual-studio-code.png" alt="vs code" />
-            <p>VS Code</p>
-          </div>
-        </div>
+        <div class="skills-content"></div>
       </div>
     </section>
 
@@ -194,6 +147,7 @@
         <div class="projects-content"></div>
       </div>
     </section>
+    
     <!-- Contact -->
     <section class="contact" id="contact">
       <div class="center-text">
@@ -254,6 +208,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Main Js File  -->
+    <script src="./js/skills.js"></script>
     <script src="./js/products.js"></script>
     <script src="./js/script.js"></script>
   </body>
