--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- About-->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="./img/about-img.png" alt="about-image" />
+        <img src="./img/favicon.JPG" alt="about-image" />
       </div>
       <div class="about-text" data-aos-anchor-placement="top-bottom ">
         <h2>I'm a Frontend <span>Developer</span></h2>
